# lenn

./: CMakeLists.txt  LenSoftMax.lua  README.md  THLENN.lua  TailLenSoftMax.lua  init.lua
lib/: CMakeLists.txt
lib/THLENN/: CMakeLists.txt  THLENN.h  init.c
lib/THLENN/generic/: LenSoftMax.c  THLENN.h  TailLenSoftMax.c
rocks/: lenn-scm-1.rockspec
test/: lensoftmax.lua  taillensoftmax.lua
