CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

FIND_PACKAGE(Torch REQUIRED)

ADD_SUBDIRECTORY(lib)

FILE(STRINGS lib/THLENN/generic/THLENN.h THLENN_headers NEWLINE_CONSUME)
FILE(WRITE THLENN_h.lua "return [[")
FILE(APPEND THLENN_h.lua ${THLENN_headers})
FILE(APPEND THLENN_h.lua "]]")

FILE(GLOB luasrc *.lua)

ADD_TORCH_PACKAGE(lenn "" "${luasrc}")

